=== 3.6.1 / ?

* 1 minor enhancements:
  * Allow path_parameters in view tests to be ammended, making working
    with routes easier.

=== 3.6.0 / 2007-05-25

* 4 major enhancements:
  * New auto-discovery mechanism to make rspec and friends work independently!
  * Moved and restructured camping and rails as plugins.
  * Removed rspec - now packaged with rspec and/or as plugin.
  * Changed the way FTM tests are named. Allows multiple matricies.
* 3 minor enhancements:
  * Added :OK special result value to FTM.
  * Hugh Sasse is awesome. Rdoc happiness.
  * Parameterized emacs client command.
* 3 bug fixes:
  * Dup load path because I'm dum.
  * Fixed a lame syntax error in emacs.rb.
  * autotest now builds command separator with '&' on windoze. ARGH! Why is this the first I've heard of this?!?

=== 3.5.2 / 2007-04-30

* 4 bug fixes:
  * Patch up Rails fixture defaults for Test::Rails::TestCase.
  * Session now properly hooked up to controllers.
  * ruby 1.8.6 has a bug on 'raise Interrupt' with no args. Fixed on both sides.
  * Fixed redgreen to work with new getc/putc-based output. (from Finn Smith)

=== 3.5.1 / 2007-04-17

* 4 bug fixes:
  * Fixed gem name to be camel-case again. Fixed on rubyforge too.
  * Fixed rdoc for hooks.
  * Fixed redgreen, results changed to an array.
  * Patch up Rails fixture defaults, since they're not inheriting properly.

=== 3.5.0 / 2007-04-12

* 4 major enhancements:
  * Now requires RubyGems 0.9.1 or newer.
  * Autotest and unit_diff are both unbuffered. Results are more live.
  * Refactored and redesigned how files map to test from Sean Carley. See fixtures plugin as an example.
  * Generalize how autotest handler is instantiated and invoked, allowing for many more autotest types, including combos.
* 23 minor enhancements:
  * Added all_good hook if initial run was all_good as well.
  * Added assert_in_epsilon to ZentestAssertions.
  * Added autotest plugin to auto-update source ala tinderbox/cruisecontrol.